user handler docs ready
